src/objects/Service_Assignment_Closure__c.object
<CustomObject>
    <fields>
        <fullName>Aftercare_Plan_Services__c</fullName>
        <label>Aftercare Plan/Services</label>
        <picklist>
            <picklistValues>
                <fullName>Discharge from IFCS: Family will request support if they should need or desire it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge from IFCS: Referral made for after care services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Assignment_Closures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compared_to_FCT_aftercare_services_are__c</fullName>
        <label>Compared to FCT, aftercare services are</label>
        <picklist>
            <picklistValues>
                <fullName>More restrictive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same level of services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less restrictive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Continuing_Service_Delivery_Model_s__c</fullName>
        <label>Continuing Service Delivery Model(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Final_FCT_Meeting__c</fullName>
        <label>Date of Final FCT Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharge_Type__c</fullName>
        <label>Discharge Type</label>
        <picklist>
            <picklistValues>
                <fullName>Final Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-Down from FCT to other IFCS service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCS_Staff_Report__c</fullName>
        <label>Staff Report</label>
        <picklist>
            <picklistValues>
                <fullName>1 = Problem Worsened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 = No/Minimal change (0-40% goal attainment)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 = Moderate Improvement (41-80% goal attainment)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 = Significant Improvement (81% or more goal attainment)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Individual_Rating__c</fullName>
        <inlineHelpText>Ask the family/individual to rate their overall perception of treatment: IFCS has improved our family life (functioning).</inlineHelpText>
        <label>Family/Individual Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Individual_Report__c</fullName>
        <label>Family/Individual Report</label>
        <picklist>
            <picklistValues>
                <fullName>1 = Problem Worsened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 = No/Minimal change (0-40% goal attainment)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 = Moderate Improvement (41-80% goal attainment)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 = Significant Improvement (81% or more goal attainment)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Discharge_Date__c</fullName>
        <label>Final Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_Request_Received__c</fullName>
        <label>Follow-up Request Received?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Placement_Recent_but_Prior__c</fullName>
        <label>Home Placement Recent but Prior</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IFCS_Record_Number__c</fullName>
        <label>IFCS Record #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Approval_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if this Service Assignment Closure can be self-approved.</description>
        <inlineHelpText>Check this field if this Service Assignment Closure can be self-approved.</inlineHelpText>
        <label>No Approval Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_Being_Served_Name__c</fullName>
        <description>A formula field to get the full name of the Person Being Served for whom this Service Assignment Closure is being submitted.</description>
        <formula>Service_Assignment__r.Person_Being_Served__r.FirstName + IF(ISNULL(Service_Assignment__r.Person_Being_Served__r.Middle_Name__c),&apos; &apos;,&apos;&apos;) + Service_Assignment__r.Person_Being_Served__r.Middle_Name__c + &apos; &apos; + Service_Assignment__r.Person_Being_Served__r.LastName</formula>
        <label>Person Being Served Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Status_at_Discharge__c</fullName>
        <label>Placement Status at Discharge</label>
        <picklist>
            <picklistValues>
                <fullName>Maintained Family Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reunified with Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self care/Planned independent living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintained out-of-home placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placed out-of-home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Treatment_Goal__c</fullName>
        <label>Primary Treatment Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Discharge__c</fullName>
        <label>Reason for Discharge</label>
        <picklist>
            <picklistValues>
                <fullName>Completed treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Runaway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family/Individual - Relocated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reunified with caregiver out of region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family/Individual - Did not comply/refused services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding not available to continue treatment/services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to another agency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Service Assignment Closures</relationshipLabel>
        <relationshipName>Service_Assignment_Closures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Specify_Where__c</fullName>
        <label>Specify Where</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specify_agency_service__c</fullName>
        <label>Specify agency/service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_Out_of_Home_Placement_Planned__c</fullName>
        <label>Was Out of Home Placement Planned?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Service Assignment Closure</label>
    <nameField>
        <label>Service_Assignment_Closure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Assignment Closures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Limit_to_1_Service_Assignment_Closure</fullName>
        <active>true</active>
        <description>A rule to limit creation of child Service Assignment Closures to one record.</description>
        <errorConditionFormula>ISNEW() &amp;&amp; Service_Assignment__r.Service_Assignment_Closure_Count__c &gt; 0</errorConditionFormula>
        <errorMessage>A Service Assignment Closure already exists for this Service Assignment.  If you received this error while editing an existing Service Assignment Closure, please return to the Service Assignment page and confirm that your changes committed successfully.</errorMessage>
    </validationRules>
</CustomObject>